project part 2 completed
